--- a/src/i18n/translations/fr.json
+++ b/src/i18n/translations/fr.json
@@ -227,7 +227,7 @@
       }
     }
   },
-  "currency": "€",
+  "currency": "L",
   "language": {
     "current": "Français",
     "switch": "Langue"
