--- a/src/i18n/translations/de.json
+++ b/src/i18n/translations/de.json
@@ -227,7 +227,7 @@
       }
     }
   },
-  "currency": "€",
+  "currency": "L",
   "language": {
     "current": "Deutsch",
     "switch": "Sprache"
