--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -227,7 +227,7 @@
       }
     }
   },
-  "currency": "€",
+  "currency": "L",
   "language": {
     "current": "English",
     "switch": "Language"
