--- a/src/i18n/translations/it.json
+++ b/src/i18n/translations/it.json
@@ -227,7 +227,7 @@
       }
     }
   },
-  "currency": "€",
+  "currency": "L",
   "language": {
     "current": "Italiano",
     "switch": "Lingua"
